--- a/NeuralNetwork_Intro.ipynb
+++ b/NeuralNetwork_Intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "d94ac13f-4564-406a-a10f-0a7590eb07bb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "6d7c652e-ce19-4549-a190-7e23477d8c24",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "4dd96fea-e8ba-4c07-bbd7-b724db363201",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "20"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "4489f613-e70d-4f41-8fea-182a17923949",
    "metadata": {
     "scrolled": true
@@ -73,8 +73,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d4eed190-2d49-48c7-b6c7-b6e66dcdb857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h=0.000000001\n",
+    "x=2/3\n",
+    "(f(x+h)-f(x))/h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3582b73a-97fc-439a-b762-54cebdc43acb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d=4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let do more complex derivative\n",
+    "a=2.0\n",
+    "b=-3.0\n",
+    "c=10.0\n",
+    "d1=a*b+c\n",
+    "print(f'd={d1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a4767b4e-9082-46b0-89ee-9079b0d0d44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d=4.0\n",
+      "d2=3.999699999999999\n",
+      "slope=-3.000000000010772\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=0.0001\n",
+    "a=2.0\n",
+    "b=-3.0\n",
+    "c=10.0\n",
+    "d1=a*b+c\n",
+    "a+=h\n",
+    "d2=a*b+c\n",
+    "print(f'd={d1}')\n",
+    "print(f'd2={d2}')\n",
+    "print(f'slope={(d2-d1)/h}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8485e2d2-45be-4604-969c-f39fe11cc27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "94c2e599-490f-472d-b773-a604b794ffe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Value:\n",
+    "    def __init__(self,data):\n",
+    "        self.data=data\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Value(data={self.data})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "c8258aeb-25fb-4ca7-b2e0-e1ef5a2389d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=2.0)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=Value(2.0)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8274c76f-927a-464e-8c0c-e207aa79fe78",
    "metadata": {},
    "outputs": [],
    "source": []
